[MODINVOICE-616]. Add unit test coverage, update comment